# rehealth_tongbu

./: .dockerignore  .gitattributes  .gitignore  ACCEPTANCE_REVIEW_2026-07-10.md  ACCEPTANCE_REVIEW_2026-07-16.md  ACCEPTANCE_REVIEW_2026-07-20.md  AGENTS.md  CODEX_ORCHESTRATION.md  ENGINEERING.md  ORCHESTRATOR_SESSION_2026-07-16.md  QA_TEST_PLAN.md  RELEASE_CHECKLIST.md  build_debug.sh  build_now.sh  sync_to_github.sh
rehealth-algorithms/: .env.example  .gitignore  Claude进展.md  LICENSE  README.md  commit.sh  commit_msg.txt  download_all_nhanes.py  push.sh  pyproject.toml  requirements.txt  simulate.py  test.py  train_distilled_model.py  train_transfer_learning.py
rehealth-algorithms/.git_backup/: COMMIT_EDITMSG  config  index  opencode  packed-refs
rehealth-algorithms/api/: main.py  production_auth.py  production_config.py  production_main.py  production_schemas.py  production_service.py  requirements.txt
rehealth-algorithms/bodyup_cloud/: __main__.py  cli.py
rehealth-algorithms/data/: solution_1_heatmap.json  solution_2_eval.json  solution_3_high_risk.json  solution_4_ranking.json  solution_5_2030.json
rehealth-algorithms/docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
rehealth-algorithms/docs/: API_DOCUMENTATION.md  CTO技术决策对话记录_20260525.md  FEATURE_ENGINEERING_DISTILLATION.md  HANGZHOU_WEIJIANKANG_PROPOSAL.md  LOWDIM_WEARABLE_MODEL.md  PIAS_INTEGRATION.md  PLAN_ATTRIBUTION_PRESENTATION.md  PROJECT_SUMMARY.md  V1_工程实施版_端云协同系统开发框架说明书.md  claude_working_memory.md  (+3 more)
(+1463 files in other folders)
