[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodyup"
version = "0.1.0"
description = "睿禾健康 BodyUP — 端云协同心血管风险干预系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "email-validator>=2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "catboost>=1.2",
    "shap>=0.45",
    "joblib>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "anthropic>=0.28",
    "openai>=1.30",
    "cryptography>=42.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]
train = [
    "imbalanced-learn>=0.12",
    "optuna>=3.6",
    "matplotlib>=3.9",
]

[tool.setuptools.packages.find]
include = ["bodyup_cloud*", "bodyup_edge_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
